# SPDX-FileCopyrightText: 2025 Stephane Neveu
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "keysas-fido"
version = "2.7.0"
edition = "2024"
authors = ["Stephane Neveu"]
description = "A command-line tool for Keysas FIDO operations."
license = "GPL-3.0-only"
repository = "https://github.com/keysas-fr/keysas"
homepage = "https://keysas-fr.github.io/keysas/"
keywords = ["security", "keysas", "cli", "fido"]
readme = "README.md"
categories = ["security", "command-line-utilities", "cryptography"]

[dependencies]
yubico_manager = { git = "https://github.com/r3dlight/yubico-manager"}
rand="0.8"
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
sled = "0.34"
anyhow = "1.0"
hex = "0.4"
kv = "0.24"
